# twitter

./: .gitignore  manage.py  pyproject.toml  requirements.txt  schema.yaml  setup.cfg  start_celery.py
fixtures/: test_data.json  user.json
post/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_reply_likes_alter_tweet_likes.py  0002_rename_reply_tweet_tweet.py  0003_alter_reply_created_by_alter_reply_likes_and_more.py  0003_rename_tweet_tweet_reply.py  0004_alter_retweet_tweet.py  0005_alter_retweet_tweet.py  0006_retweet_quote.py  0007_alter_retweet_options_alter_tweet_options_and_more.py  0008_alter_tweet_options_rename_reply_tweet_reply_to_and_more.py  0009_delete_retweet.py  0010_remove_tweet_is_reply.py  0011_alter_tweet_reply_to_alter_tweet_tweet.py  0012_alter_tweet_created_by.py  0013_alter_tweet_likes.py  0014_tweet_tags.py  0015_remove_tweet_likes_alter_tweet_content_like.py  0016_tweet_likes.py  0017_alter_tweet_reply_to_alter_tweet_tweet.py  0020_tweetmedia.py  (+3 more)
real_time/: admin.py  apps.py  consumers.py  models.py  routing.py  serilizers.py  tasks.py  urls.py  views.py
twitter/: __init__.py  asgi.py  celery.py  consumers.py  filters.py  managers.py  middleware.py  mixins.py  permissions.py  queryset.py  routing.py  serializers.py  settings.py  urls.py  util.py
users/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
utils/: const.py  filters.py  helpers.py  managers.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  queryset.py  serializers.py
(+35 files in other folders)
